// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render PlanPicker for non-self-serve customers 1`] = `
<div>
  <p>
    Your current 
    <strong>
      Just 10
    </strong>
     plan includes 
    <strong>
      10
    </strong>
     emails per month.
  </p>
  <p>
    <span>
      To make changes to your plan or billing information, 
      <a
        href="mailto:support@sparkpost.com"
      >
        contact support
      </a>
      .
    </span>
  </p>
</div>
`;

exports[`renders PlanPicker if self-serve 1`] = `
<Field
  component={[Function]}
  name="planpicker"
  plans={Array []}
/>
`;

exports[`renders correctly with a pending plan change 1`] = `
<div>
  <p>
    Your current 
    <strong>
      Just 10
    </strong>
     plan includes 
    <strong>
      10
    </strong>
     emails per month.
  </p>
  <p>
    <span>
      You're scheduled to switch to the 
      More than 10!
       plan on 
      tomorrow
      . If you have any questions, please 
      <a
        href="mailto:support@sparkpost.com"
      >
        contact support
      </a>
      .
    </span>
  </p>
</div>
`;
